Refactored todolist screen

--- a/app/src/main/res/layout/fragment_tasklist.xml
+++ b/app/src/main/res/layout/fragment_tasklist.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/tasklist_background"
-    tools:context=".ui.todolist.tasks.TaskRecyclerFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todolist_recycler_view"
+    <FrameLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_todolist_task" />
+        android:background="@color/tasklist_background"
+        tools:context=".ui.todolist.tasks.TaskRecyclerFragment">
 
-</FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todolist_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_todolist_task" />
+
+    </FrameLayout>
+</layout>
