--- a/app/src/main/res/layout/fragment_tags.xml
+++ b/app/src/main/res/layout/fragment_tags.xml
@@ -1,61 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:mrg="http://mirage.com/mrg"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tag_fragment_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/tasklist_background">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tags_toolbar"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:mrg="http://mirage.com/mrg"
+        android:id="@+id/tag_fragment_root"
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
-        android:background="@color/light_blue"
-        app:menu="@menu/tags_toolbar_menu"
-        app:titleTextColor="@color/white"
-        app:title="@string/drawer_btn_tags"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:layout_height="match_parent"
+        android:background="@color/tasklist_background">
 
-    <ScrollView
-        android:id="@+id/tag_fragment_scroll"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tags_toolbar">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/tag_fragment_scroll_layout"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tags_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="?android:actionBarSize"
+            android:background="@color/light_blue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/tags_toolbar_menu"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:title="@string/drawer_btn_tags"
+            app:titleTextColor="@color/white" />
 
-            <com.mirage.todolist.ui.todolist.tags.TagsView
-                android:id="@+id/tag_fragment_chips"
+        <ScrollView
+            android:id="@+id/tag_fragment_scroll"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tags_toolbar">
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/tag_fragment_scroll_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:isScrollContainer="false"
-                app:chipSpacingHorizontal="16dp"
-                app:chipSpacingVertical="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                app:selectionRequired="false"
-                mrg:closeIconEnabled="false"
-                mrg:enlarged="true" />
+                android:layout_height="wrap_content">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+                <com.mirage.todolist.ui.todolist.tags.TagsView
+                    android:id="@+id/tag_fragment_chips"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:isScrollContainer="false"
+                    app:chipSpacingHorizontal="16dp"
+                    app:chipSpacingVertical="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:selectionRequired="false"
+                    mrg:closeIconEnabled="false"
+                    mrg:enlarged="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
