--- a/app/src/main/res/navigation/navigation_lock_screen.xml
+++ b/app/src/main/res/navigation/navigation_lock_screen.xml
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/nav_fragment_graphical_key"
-        android:name="com.mirage.todolist.ui.settings.GraphicalKeyFragment"
+        android:name="com.mirage.todolist.ui.lockscreen.GraphicalKeyFragment"
         android:label="GraphicalKeyFragment" >
         <action
             android:id="@+id/action_nav_fragment_graphical_key_to_todolistActivity"
