--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -88,7 +88,7 @@
                     android:text="@string/edit_task_tags_btn"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    app:icon="@drawable/baseline_add_24"
+                    app:icon="@drawable/ic_add"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -132,7 +132,7 @@
                     android:singleLine="true"
                     android:textSize="20sp"
                     android:visibility="gone"
-                    app:drawableStartCompat="@drawable/baseline_place_24"
+                    app:drawableStartCompat="@drawable/ic_location"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/edit_task_location_title" />
 
@@ -158,7 +158,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/edit_task_location_text"
                     app:layout_constraintStart_toEndOf="@+id/edit_task_location_text"
                     app:layout_constraintTop_toTopOf="@+id/edit_task_location_text"
-                    app:srcCompat="@drawable/baseline_cancel_24" />
+                    app:srcCompat="@drawable/ic_remove_tag" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
