--- a/app/src/main/res/menu/edit_task_toolbar_menu.xml
+++ b/app/src/main/res/menu/edit_task_toolbar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/edit_task_toolbar_save"
         android:title="@string/edit_task_toolbar_save_btn"
-        android:icon="@drawable/baseline_check_24"
+        android:icon="@drawable/ic_confirm"
         app:showAsAction="always|collapseActionView"
         />
 </menu>
