--- a/app/src/main/res/menu/tags_toolbar_menu.xml
+++ b/app/src/main/res/menu/tags_toolbar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/tags_toolbar_new_tag"
         android:title="@string/tags_new_tag_btn"
-        android:icon="@drawable/baseline_add_24"
+        android:icon="@drawable/ic_add"
         app:showAsAction="always|collapseActionView"
         />
 </menu>
