Updated location activity to support location selection

--- a/app/src/main/res/menu/current_place_menu.xml
+++ b/app/src/main/res/menu/current_place_menu.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/option_get_place"
-        android:title="@string/option_get_place"
+        android:title="@string/location_save_location"
         app:showAsAction="always"/>
 </menu>
